# Computer-low-level-learning-project

./: README.md  heap_sort  resume.md  run.sh  runs.sh
Algorithms/: run.sh
Algorithms/Leetcode/1/: map.c
Algorithms/Leetcode/146/: 1.c  2.c
Algorithms/Leetcode/622/: 1.c
Algorithms/src/Tree/: 1.c
Algorithms/src/findmaximumsubarray/: 1.c
Algorithms/src/queue/: 1.c
BOOK/: PROGRESS.md  book.aux  book.out  book.tex  book.toc
BOOK/algo/: main.tex
BOOK/chip/: main.tex
BOOK/cuda/: main.tex
BOOK/intro/: main.tex
BOOK/isa/: main.tex
BOOK/qemu/: main.tex
CUDA/: run.sh
CUDA/src/: hello.cu
Chip/: PROGRESS.md
Chip/Logisim/: CPU_but_how_do_it_know.lsebdl
Chip/Verilog/: design.md
Chip/src/: uart_rx.v  uart_tx.v
ISA/: hello.s  run.sh
ISA/spec/: ISA.md  schedule.md
ISA/src/: exit.s  instr.s  memory.inc  memory.s  memorycopy.s  memoryfree.s  str_parse_cmd.s  string_array.s  strlib.s  test.s
PCB_TCB/: kernel.c  spc.md  test
PCB_TCB/include/: io_stdin.h  scheduler.h  task.h  timer.h
PCB_TCB/src/: io_stdin.c  scheduler.c  task.c  test.c  timer.c
QEMU/: CMakeLists.txt  cmakerun.sh  disk.img  dump.dtb  dump.dts  kernel.c  linker.ld  run.sh  schedule.md  start.s
QEMU/include/: exit.h  uart.h
QEMU/src/: GIC.c  cmemory.c  exceptionhandler.c  exit.c  fs.c  gpu.c  lib.c  page.c  time.c  uart.c  virtio.c
QEMU/src/ASM/: exceptions.s  memory.s  spinlock.s
QEMU/src/include/: GIC.h  cmemory.h  exceptionhandler.h  fs.h  gpu.h  lib.h  memory.h  page.h  spinlock.h  time.h  uart.h  virtio.h
QEMU/src_1/: exceptionsolution.c  testfs.c  testgpu.c
QEMU/src_1/include/: exceptionsolution.h  testfs.h
UISIntr/: run.sh
UISIntr/src/: instr.s  string_array.s  test.s
algo/: run.sh
ctos/: main.s
journal/: 20260709.md  20260710.md  readme.md
linux0.12/: run.sh  test.sh
linux0.12/src/: boot.s
src/: inserton_sort.c  merge_sort.c
src/findmaximumsubarray/: 1.c
(+54 files in other folders)
